infrastructure/kubernetes/shared/ingress/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: appointments-app
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8000
      - path: /api/services
        pathType: Prefix
        backend:
          service:
            name: service-catalog-service
            port:
              number: 8000
      - path: /api/services
        pathType: Prefix
        backend:
          service:
            name: availability-service
            port:
              number: 8000
      - path: /api/services
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port:
              number: 8000
